# AwesomeKernels

./: .clangd  .gitignore  CMakeLists.txt  README.md
csrc/HGEMM/: README.md  hgemm_mma.cu
csrc/fa/: README.md  naiveFa.cu
csrc/hgemm/: CMakeLists.txt  hgemm_wmma.cu
dsl/CUTE/: cute_hgemm.cu  cute_hgemm.cuh  launch.cu  launch.py
dsl/cute/: README.md
dsl/cute/mixed_presicion_hgemm/: launch.cu  launch.py  mixed_precision_gemm.cuh
dsl/cute/naive_hgemm/: cute_hgemm.cuh  launch.cu  launch.py
src/CUTLASS/: README.md
src/HGEMM/: hgemm_mma.cu  hgemm_wmma.cu  ptx.cuh
src/Hgemm/: CMakeLists.txt  README.md  hgemm_mma.cu  hgemm_v1_wmma_m16n16k16_naive_kernel.cu  hgemm_v2_wmma_m16n16k16_mma4x2_kernel.cu  hgemm_v3_wmma_m16n16k16_mma4x2_warp2x4_kernel.cu  hgemm_wmma.cu
src/Hgemm/common/: matrix.h  tester.h
src/SGEMM/: sgemm.cu
src/Sgemm/: CMakeLists.txt  README.md  my_sgemm_v0_global_memory.cu  naiveGemm.cu  sgemm.cu
